environments/dev/kubernetes/services/ops/artifactory-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artifactory-manager
  labels:
    app: artifactory-manager
    env: dev
  namespace: ops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artifactory-manager
  revisionHistoryLimit: 1
  template:
    metadata:
      name: artifactory-manager
      labels:
        app: artifactory-manager
        env: dev
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: artifactory-manager
          image: steblynskyi-docker.jfrog.io/ops-artifactory-manager:8287089
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name:  kubeconfig
              mountPath:  /home/.kube/
      volumes:
        - name: kubeconfig
          secret:
              defaultMode: 420
              optional: false
              secretName:  devops-app-kubeconfig
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: artifactory-manager
  namespace: ops
  labels:
    Domain: ops-artifactory-manager.dev-steblynskyi.com
spec:
  selector:
    app: artifactory-manager
    env: dev
  ports:
    - port: 80
      name: http
      targetPort: 3000
      protocol: TCP
  type: NodePort
