environments/dev/kubernetes/services/ops/authentication-poc-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-poc-web
  labels:
    app: authentication-poc-web
    env: dev
  namespace: ops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-poc-web
  revisionHistoryLimit: 1
  template:
    metadata:
      name: authentication-poc-web
      labels:
        app: authentication-poc-web
        env: dev
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: authentication-poc-web
          image: steblynskyi-docker.jfrog.io/ops-authentication-poc-web:9f95c63
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: authentication-poc-web
  namespace: ops
  labels:
    Domain: ops-authentication-poc-web.dev-steblynskyi.com
spec:
  selector:
    app: authentication-poc-web
    env: dev
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
  type: NodePort
