environments/dev/kubernetes/services/ops/centralized-log-system-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  centralized-log-system-web
  labels:
    app: centralized-log-system-web
    env: dev
  namespace: ops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: centralized-log-system-web
  revisionHistoryLimit: 1
  template:
    metadata:
      name: centralized-log-system-web
      labels:
        env: dev
        app: centralized-log-system-web
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: centralized-log-system-web
        image: steblynskyi-docker.jfrog.io/ops-centralized-log-system-web:5f210e1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 50Mi
          limits:
            cpu: 150m
            memory: 250Mi
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: centralized-log-system-web
  namespace: ops
  labels:
    Domain: ops-centralized-log-system-web.dev-steblynskyi.com
spec:
  selector:
    app: centralized-log-system-web
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 80
    protocol: TCP
  type: NodePort
