environments/dev/kubernetes/services/ops/db-index-manager-tool-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-index-manager-tool-web
  labels:
    app: db-index-manager-tool-web
    env: dev
  namespace: ops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-index-manager-tool-web
  revisionHistoryLimit: 1
  template:
    metadata:
      name: db-index-manager-tool-web
      labels:
        app: db-index-manager-tool-web
        env: dev
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: db-index-manager-tool-web
          image: steblynskyi-docker.jfrog.io/ops-db-index-manager-tool-web:42ad44a
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: db-index-manager-tool-web
  namespace: ops
  labels:
    Domain: ops-db-index-manager-tool-web.dev-steblynskyi.com
spec:
  selector:
    app: db-index-manager-tool-web
    env: dev
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
  type: NodePort
