environments/dev/kubernetes/services/ops/delete-clients-inncenter-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-clients-center-web
  labels:
    app: delete-clients-center-web
    env: dev
  namespace: ops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: delete-clients-center-web
  revisionHistoryLimit: 1
  template:
    metadata:
      name: delete-clients-center-web
      labels:
        app: delete-clients-center-web
        env: dev
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: delete-clients-center-web
          image: steblynskyi-docker.jfrog.io/ops-delete-clients-center-web:39a62d4
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: delete-clients-center-web
  namespace: ops
  labels:
    Domain: ops-delete-clients-center-web.dev-steblynskyi.com
spec:
  selector:
    app: delete-clients-center-web
    env: dev
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
  type: NodePort
