environments/dev/kubernetes/services/ops/heart-beat-monitor-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heart-beat-monitor-api
  labels:
    app: heart-beat-monitor-api
    env: dev
  namespace: ops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heart-beat-monitor-api
  revisionHistoryLimit: 1
  template:
    metadata:
      name: heart-beat-monitor-api
      labels:
        app: heart-beat-monitor-api
        env: dev
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: heart-beat-monitor-api
          image: steblynskyi-docker.jfrog.io/ops-heart-beat-monitor-api:bcbf153  
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: heart-beat-monitor-api
  namespace: ops
  labels:
    Domain: ops-heart-beat-monitor-api.dev-steblynskyi.com
spec:
  selector:
    app: heart-beat-monitor-api
    env: dev
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
  type: NodePort
