environments/dev/kubernetes/services/ops/internal-support-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  internal-support-manager
  labels:
    app: internal-support-manager
    env: dev
  namespace: ops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internal-support-manager
  revisionHistoryLimit: 1
  template:
    metadata:
      name: internal-support-manager
      labels:
        env: dev
        app: internal-support-manager
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: internal-support-manager
        image: steblynskyi-docker.jfrog.io/ops-internal-support-manager:933b862
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
          name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: internal-support-manager
  namespace: ops
  labels:
    Domain: ops-internalsupport.dev-steblynskyi.com
spec:
  selector:
    app: internal-support-manager
    env: dev
  ports:
  - port: 80
    name: http
    targetPort: 80
    protocol: TCP
  type: NodePort
