environments/dev/kubernetes/services/ops/interview-management-system-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interview-management-system-v2
  labels:
    app: interview-management-system-v2
    env: dev
  namespace: ops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: interview-management-system-v2
  revisionHistoryLimit: 1
  template:
    metadata:
      name: interview-management-system-v2
      labels:
        app: interview-management-system-v2
        env: dev
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: interview-management-system-v2
          image: steblynskyi-docker.jfrog.io/ops-interview-management-system-v2:3e1d129
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 5000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: interview-management-system-v2
  namespace: ops
  labels:
    Domain: ops-interview-management-system-v2.dev-steblynskyi.com
spec:
  selector:
    app: interview-management-system-v2
    env: dev
  ports:
    - port: 80
      name: http
      targetPort: 5000
      protocol: TCP
  type: NodePort
