environments/dev/kubernetes/services/ops/people-management-system.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: people-management-system
  labels:
    app: people-management-system
    env: dev
  namespace: ops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: people-management-system
  revisionHistoryLimit: 1
  template:
    metadata:
      name: people-management-system
      labels:
        app: people-management-system
        env: dev
      annotations:
        steblynskyi.io/inject-secret: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: people-management-system
          image: steblynskyi-docker.jfrog.io/ops-people-management-system:253ac41
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: people-management-system
  namespace: ops
  labels:
    Domain: ops-people-management-system.dev-steblynskyi.com
spec:
  selector:
    app: people-management-system
    env: dev
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
  type: NodePort
