environments/dev/kubernetes/services/ops/performance-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: performance-metrics
  labels:
    app: performance-metrics
    env: dev
  namespace: ops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: performance-metrics
  revisionHistoryLimit: 1
  template:
    metadata:
      name: performance-metrics
      labels:
        app: performance-metrics
        env: dev
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: performance-metrics
          image: steblynskyi-docker.jfrog.io/ops-performance-metrics:0cc425c
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 80
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: performance-metrics
  namespace: ops
  labels:
    Domain: ops-performance-metrics.dev-steblynskyi.com
spec:
  selector:
    app: performance-metrics
    env: dev
  ports:
    - port: 80
      name: http
      targetPort: 80
      protocol: TCP
  type: NodePort
