environments/dev/kubernetes/services/ops/OPS-INGRESS-GLOBAL.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ops-ingress-global
  namespace: ops
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/target-node-labels: kops.k8s.io/instancegroup=nodes
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=DEV,Name=OPS-Ingress-Gloabal
    alb.ingress.kubernetes.io/subnets: subnet-1,subnet-2
    alb.ingress.kubernetes.io/security-groups: sg-1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123:certificate/111-222-333-444-55555
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-2-2017-01
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=false,access_logs.s3.bucket=steblynskyi-dev-access-logs,access_logs.s3.prefix=pc,deletion_protection.enabled=true,routing.http2.enabled=true,idle_timeout.timeout_seconds=120
spec:
  rules:
  - host: ops-database-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: database-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: ops-candidate-testing-react-api.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: candidate-testing-api
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: ops-performance-metrics.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: performance-metrics
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: ops-computers-ip-reporting-service.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: computers-ip-reporting-service
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: ops-internalsupport.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: internal-support-manager
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: ops-authentication-poc-web.dev-steblynskyi.com
    http:
      paths:
      - backend:
          service:
            name: authentication-poc-web
            port:
              number: 80
        path: /*
        pathType: ImplementationSpecific
  - host: ops-manual-data-mining-manager.dev-steblynskyi.com
    http:
      paths:
        - backend:
            service:
              name: manual-data-mining-manager
              port:
                number: 80
          path: /*
          pathType: ImplementationSpecific
